[package]
name = "fast-init"
version = "0.1.0"
edition = "2024"

[dependencies]
fast-core = { path = "../fast-core" }
bytes = "1.5.0"
clap = "4.4.0"
env_logger = "0.10.0"
failure = "0.1.8"
futures = "0.3.31"
log = "0.4.20"
net2 = "0.2.37"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.107"
structopt = "0.3.26"
tempfile = "3.6.0"
tokio = { version = "1.45.1", features = ["full"] }
rand = "0.9.1"
hex = "0.4.3"
